Исправить тесты после оптимизации класса Timetable.